--- a/src/app/tekgain-component/course/home/home.component.css
+++ b/src/app/tekgain-component/course/home/home.component.css
@@ -23,3 +23,28 @@
   color: var(--white-color);
   border: 1px solid var(--orange-light-color);
 }
+
+.car-main {
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.card-1 {
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+  width: 320px;
+}
+
+.card-header {
+  padding: 0.75rem;
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+  width: 320px;
+  height: 185px;
+  background-color: var(--text-color);
+  color: var(--white-color);
+}
+.card-body{
+  padding: 0.75rem;
+  background-color:var(--white-color);
+  color:var(--text-color);
+}
