--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,7 @@ body {
 input:-internal-autofill-selected {
     background-color: var(--white-color) !important;
 }
+textarea.ng-invalid.ng-touched,
 input.ng-invalid.ng-touched {
   box-shadow: var(--box-shadow-danger-btn-focus) !important;
   border: 1px solid transparent;
